--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-gesture-handler": "^2.19.0",
-    "react-native-safe-area-context": "^4.11.0"
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-svg": "^15.6.0",
+    "react-native-svg-transformer": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
